sell and resale car; fix home flex wrap cars

--- a/frontend/src/pages/CarPages/MyCars/MyCars.css
+++ b/frontend/src/pages/CarPages/MyCars/MyCars.css
@@ -3,16 +3,23 @@
   flex-direction: column;
 }
 
-.car-list {
+.car-item {
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  flex-direction: column;
 
   width: 85vw;
   box-shadow: 0px 0px 6px black;
   border-radius: 15px;
 
   margin-bottom: 2rem;
+}
+
+.car-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+
+  width: 100%;
 }
 
 .car-list .img {
@@ -40,4 +47,40 @@
   justify-content: space-around;
 
   height: 5rem;
+}
+
+.car-options {
+  width: 100%;
+}
+
+.car-options .car-options-sell {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+
+  width: 100%;
+}
+
+.car-options .car-options-sell {
+  height: 2rem;
+}
+
+.car-options .car-options-sell button {
+  background: transparent;
+  border: none;
+
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 700;
+  color: var(--second-color);
+}
+
+.car-options .car-options-sell button:disabled {
+  background: transparent;
+  border: none;
+
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 700;
+  color: var(--second-color);
+
+  opacity: 0.75;
 }
