--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -1,5 +1,6 @@
 .cars-container {
-  margin: 1rem 2rem;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .car-link {
@@ -8,10 +9,10 @@
 }
 
 .car-card {
-  margin: 1.5rem 0;
+  margin: 1.5rem 1.5rem;
   display: flex;
   flex-direction: column;
-  width: 80vw;
+  width: 20rem;
 
   border-radius: 10px;
   box-shadow: 0px 0px 10px 0px black;
